--- a/src/app/mapas/pages/zoom-range/zoom-range.component.html
+++ b/src/app/mapas/pages/zoom-range/zoom-range.component.html
@@ -1,1 +1,15 @@
-<p>zoom-range works!</p>
+<div #mapa class="mapa-container"></div>
+
+<div class="row">
+  <div class="col-12">
+    <label class="form-label">
+      Zoom: {{zoomLevel | number:'2.0-2'}} - Long, Lat = [-12.2313, -72.3434]
+    </label>
+    <input type="range" class="form-range" >
+  </div>
+
+  <div class="col-12">
+      <button class="btn btn-primary" (click)="zoomOut()">-</button>
+      <button class="btn btn-primary float-end" (click)="zoomIn()">+</button>
+    </div>
+</div>
