--- a/src/app/mapas/pages/zoom-range/zoom-range.component.html
+++ b/src/app/mapas/pages/zoom-range/zoom-range.component.html
@@ -5,7 +5,12 @@
     <label class="form-label">
       Zoom: {{zoomLevel | number:'2.0-2'}} - Long, Lat = [-12.2313, -72.3434]
     </label>
-    <input type="range" class="form-range" >
+    <input type="range" class="form-range" 
+    [value]="zoomLevel"
+    min="0"
+    max="18"
+    (input)="zoomCambio(zoomInput.value)"
+    #zoomInput>
   </div>
 
   <div class="col-12">
