--- a/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -1,1 +1,18 @@
-<p>marcadores works!</p>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-info" (click)="agregarMarcador()">
+    + Agregar
+  </li>
+
+  <li
+    class="list-group-item"
+    (click)="irMarcador()"
+    *ngFor="let marcador of marcadores; let i = index"
+    [ngStyle]="{
+        'background-color': marcador.color
+    }"
+  >
+    Marcador {{ i + 1 }}
+  </li>
+</ul>
+
+<div #mapa class="mapa-container"></div>
