Editando y elimninando marcadores

--- a/src/app/mapas/pages/marcadores/marcadores.component.html
+++ b/src/app/mapas/pages/marcadores/marcadores.component.html
@@ -6,7 +6,9 @@
   <li
     class="list-group-item"
     (click)="irMarcador(marcador.marker)"
+    
     *ngFor="let marcador of marcadores; let i = index"
+    (dblclick)="borrarMarcador(i)"
     [ngStyle]="{
         'background-color': marcador.color
     }"
